--- a/src/index.html
+++ b/src/index.html
@@ -275,12 +275,12 @@
                             <li>Ни каких взносов 0%!</li>
                             <li>Можем подключать удаленно без приезда в офис</li>
                             <li>ИП не требуется</li>
-                            <li>Заказы распределяются без учета рейтинга ближай-<br>шим водителям</li>
+                            <li>Заказы распределяются без учета рейтинга ближайшим водителям</li>
                             <li>Работа только по безналичному расчету</li>
-                            <li>Деньги перечисляем на карту водителю или наличны-<br>ми в офисе</li>
+                            <li>Деньги перечисляем на карту водителю или наличными в офисе</li>
                         </ul>
                         <div class="require_descr">
-                            В день заработок составляет 7000-12000р + бонус 3000т<br>рублей
+                            В день заработок составляет 7000-12000р + бонус 3000т рублей
                         </div>
                     </div>
                 </div>
@@ -292,7 +292,7 @@
                         <ul class="require_list">
                             <li>Предоставляем авто без залога</li>
                             <li>Без ежедневных выплат по аренде</li>
-                            <li>Среда пятница и суббота работа на компанию осталь-<br>ные дни вы работаете на себя</li>
+                            <li>Среда пятница и суббота работа на компанию остальные дни вы работаете на себя</li>
                         </ul>
                     </div>
                 </div>
